# notes

./: README.md
clang/hello-autotools/: INSTALL.txt  Makefile.am  README.md  autogen.sh  configure.ac
docs/cheatsheets/: doctl.md  install-steam  kubectl.md
docs/howtos/: install-tools.md
docs/journal/: 2019-09-29.md  2019-10-13.md  2019-10-20.md
docs/research/: foo.rb  green_threads.md
haskell/: README.md  initialize-a-new-project-directory.md
haskell/hello/: .gitignore  GETTING-STARTED.md  README.md  README2.md  bar.html  five.hs  foo.html  hello.hs
haskell/hello-cabal/: .gitignore  .vimrc  HelloCabal.cabal
haskell/hello-cabal/src/: Main.hs
haskell/hello-text/: hello-text.cabal
haskell/hello-world/: .gitignore
hello-world/: hello-world.cabal
hello-world/src/: Hello.hs  Main.hs
http/: README.md
logref/api/: build.sh  push.sh
logref/k8s/: apply.sh  logref-www.yaml
logref/proxy/: push.sh  run.sh
logref/www/: build.sh  run.sh
pony/: .gitignore  README.md
pony/actors/: main.pony
pony/array/: main.pony
pony/cap_sample1/: main.pony
pony/class/: main.pony
pony/comments/: main.pony
pony/compound/: main.pony
pony/control/: main.pony
pony/env/: main.pony
pony/error/: main.pony
pony/generics/: main.pony
pony/hello/: .gitignore
pony/list/: main.pony
pony/litterals/: main.pony
pony/methods/: main.pony
pony/net/: listener.pony  main.pony  ping.pony  pong.pony
pony/operators/: main.pony
pony/printing/: main.pony
pony/reference_capabilities/: main.pony
pony/speaker/: main.pony
pony/subtyping/: main.pony
pony/type-expressions/: .gitignore  main.pony
pony/variables/: main.pony
qcp/: .gitignore  CHANGELOG.md  README.md  workdir.cabal
ruby/: README.md
ruby/agent-resource/: .byebug_history  sample.rb  sample2.rb
ruby/hello-rack/: .gitignore  build.sh  (+1 more)
rust/: notes.md
(+70 files in other folders)
