cabal-version:       >=1.10
name:                hello-world
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Hello
  build-depends:       base >=4.13 && <4.14

executable hello-world
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  other-modules:       Hello
