cabal-version:       >=1.10
name:                workdir
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     MyLib
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010

executable workdir
  main-is:             Main.hs
  other-modules:       MyLib
  build-depends:       base >=4.14 && <4.15, workdir
  default-language:    Haskell2010
